--- a/input_output.ipynb
+++ b/input_output.ipynb
@@ -40,12 +40,106 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "e8c4b051",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "2. ##### Round to two decimal a float number (from user)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "203fce50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The rounded number is: 2.44\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = float(input(\"Give me a float number\"))\n",
+    "\n",
+    "rounded = round(number,2)\n",
+    "\n",
+    "print(f'The rounded number is: {rounded}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8100a82e",
+   "metadata": {},
+   "source": [
+    "3. ##### Ask for 5 floating points and add them to a list. Then print the list.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0cd81ae6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4.3233, 6.3324, 5.4, 3.3, 2.55]\n"
+     ]
+    }
+   ],
+   "source": [
+    "counter = 0\n",
+    "list_float = []\n",
+    "\n",
+    "while counter < 5:\n",
+    "    float_nr = float(input(\"Enter a float number\"))\n",
+    "    list_float.append(float_nr)\n",
+    "    counter += 1\n",
+    "\n",
+    "print(list_float)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ae0d82d",
+   "metadata": {},
+   "source": [
+    "4. ##### Ask for n words input and then save them into n different variables. Then print. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bc22d85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Word_1': 'ghgkd', 'Word_2': 'dc', 'Word_3': 'sdf', 'Word_4': 'edd', 'Word_5': 'gino', 'Word_6': 'bistecca'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "password = input(\"Give me some words to use as a password\")\n",
+    "\n",
+    "new_password = password.split()\n",
+    "\n",
+    "dict_password = {}\n",
+    "counter = 1\n",
+    "\n",
+    "for x in new_password:\n",
+    "    dict_password[f'Word_{counter}'] = x\n",
+    "    counter +=1\n",
+    "\n",
+    "print(dict_password)"
+   ]
   }
  ],
  "metadata": {
