--- a/input_output.ipynb
+++ b/input_output.ipynb
@@ -140,6 +140,44 @@
     "\n",
     "print(dict_password)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d564937",
+   "metadata": {},
+   "source": [
+    "4. ##### Ask for personal data and then print a sentence using these variables and the .format() method.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "6f0faf75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Guido, a student living in Amsterdam\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input(\"Enter your first name\").capitalize()\n",
+    "profession = input(\"Enter your profession\").lower()\n",
+    "location = input('Where do you live?').capitalize()\n",
+    "\n",
+    "print(\"{}, a {} living in {}\".format(name, profession,location))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "333fdba9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
