--- a/input_output.ipynb
+++ b/input_output.ipynb
@@ -146,7 +146,7 @@
    "id": "7d564937",
    "metadata": {},
    "source": [
-    "4. ##### Ask for personal data and then print a sentence using these variables and the .format() method.\n"
+    "5. ##### Ask for personal data and then print a sentence using these variables and the .format() method.\n"
    ]
   },
   {
@@ -172,9 +172,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "333fdba9",
+   "metadata": {},
+   "source": [
+    "6. ##### Ask the user for a numerator and a denominator. Calculate the percentage and display it with two decimal places followed by a percent sign (e.g., 75.50%).\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "9b067a93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You have spent 83.33 % of the actual value. That's not bad. \n"
+     ]
+    }
+   ],
+   "source": [
+    "numerator = int(input(\"How much did you pay for your house?\"))\n",
+    "denominator = int(input(\"How much was the asking price?\"))\n",
+    "\n",
+    "percentage_paid = round((numerator / denominator) *100, 2)\n",
+    "\n",
+    "if numerator < denominator:\n",
+    "    print(f\"You have spent {percentage_paid} % of the actual value. That's not bad. \")\n",
+    "elif numerator > denominator:\n",
+    "    print(f\"You have spent {percentage_paid} % of the actual value. Maybe a bit too much.\")\n",
+    "else:\n",
+    "    print(f\"Ok, the money that were asked.\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "333fdba9",
+   "id": "44c7a1d6",
    "metadata": {},
    "outputs": [],
    "source": []
