--- a/input_output.ipynb
+++ b/input_output.ipynb
@@ -13,7 +13,7 @@
    "id": "c240d98f",
    "metadata": {},
    "source": [
-    "1. ##### Write a program to accept two integer numbers from the user and calculate their product.\n"
+    "##### 1. Write a program to accept two integer numbers from the user and calculate their product.\n"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "id": "e8c4b051",
    "metadata": {},
    "source": [
-    "2. ##### Round to two decimal a float number (from user)\n",
+    "##### 2. Round to two decimal a float number (from user)\n",
     "\n"
    ]
   },
@@ -75,7 +75,7 @@
    "id": "8100a82e",
    "metadata": {},
    "source": [
-    "3. ##### Ask for 5 floating points and add them to a list. Then print the list.\n"
+    "##### 3. Ask for 5 floating points and add them to a list. Then print the list.\n"
    ]
   },
   {
@@ -109,7 +109,7 @@
    "id": "3ae0d82d",
    "metadata": {},
    "source": [
-    "4. ##### Ask for n words input and then save them into n different variables. Then print. \n"
+    "##### 4. Ask for n words input and then save them into n different variables. Then print. \n"
    ]
   },
   {
@@ -146,7 +146,7 @@
    "id": "7d564937",
    "metadata": {},
    "source": [
-    "5. ##### Ask for personal data and then print a sentence using these variables and the .format() method.\n"
+    "##### 5. Ask for personal data and then print a sentence using these variables and the .format() method.\n"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "id": "333fdba9",
    "metadata": {},
    "source": [
-    "6. ##### Ask the user for a numerator and a denominator. Calculate the percentage and display it with two decimal places followed by a percent sign (e.g., 75.50%).\n",
+    "##### 6. Ask the user for a numerator and a denominator. Calculate the percentage and display it with two decimal places followed by a percent sign (e.g., 75.50%).\n",
     "\n",
     "\n"
    ]
@@ -210,12 +210,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2d4022f1",
+   "metadata": {},
+   "source": [
+    "##### 7. Create a simple interactive menu with options like “1. Say Hello”, “2. Calculate Square”, “3. Exit”. Based on the user’s input, perform the corresponding action."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44c7a1d6",
+   "id": "28d72e42",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hey Guido. Select:\n",
+      "1 -> To calculate the square of a number.\n",
+      "2 -> To exit the program.\n",
+      "Enter a valid choice\n",
+      "Hey Guido. Select:\n",
+      "1 -> To calculate the square of a number.\n",
+      "2 -> To exit the program.\n",
+      "Unvalid choice.\n",
+      "Hey Guido. Select:\n",
+      "1 -> To calculate the square of a number.\n",
+      "2 -> To exit the program.\n",
+      "The square of 3.0 is 9.0.\n",
+      "Hey Guido. Select:\n",
+      "1 -> To calculate the square of a number.\n",
+      "2 -> To exit the program.\n",
+      "Enter a valid choice\n",
+      "Hey Guido. Select:\n",
+      "1 -> To calculate the square of a number.\n",
+      "2 -> To exit the program.\n",
+      "Enter a valid choice\n",
+      "Hey Guido. Select:\n",
+      "1 -> To calculate the square of a number.\n",
+      "2 -> To exit the program.\n",
+      "Unvalid choice.\n",
+      "Hey Guido. Select:\n",
+      "1 -> To calculate the square of a number.\n",
+      "2 -> To exit the program.\n",
+      "Unvalid choice.\n",
+      "Hey Guido. Select:\n",
+      "1 -> To calculate the square of a number.\n",
+      "2 -> To exit the program.\n",
+      "The square of 4.66 is 21.72.\n",
+      "Hey Guido. Select:\n",
+      "1 -> To calculate the square of a number.\n",
+      "2 -> To exit the program.\n",
+      "You enter an unvalid character.\n",
+      "Hey Guido. Select:\n",
+      "1 -> To calculate the square of a number.\n",
+      "2 -> To exit the program.\n",
+      "You enter an unvalid character.\n",
+      "Hey Guido. Select:\n",
+      "1 -> To calculate the square of a number.\n",
+      "2 -> To exit the program.\n",
+      "Thanks, see you soon.\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input('Welcome, what is your name?').capitalize()\n",
+    "exit = ''\n",
+    "\n",
+    "while exit != 'exit':\n",
+    "    print(f'Hey {name}. Select:\\n1 -> To calculate the square of a number.\\n2 -> To exit the program.')\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    try:\n",
+    "        choice = int(input(\"1 or 2?\"))  \n",
+    "\n",
+    "        if choice == 1:\n",
+    "            try:\n",
+    "                number = float(input(\"Enter the number, please.\"))\n",
+    "                print(f\"The square of {number} is {round((number**2), 2)}.\")\n",
+    "            except ValueError:\n",
+    "                print(\"You enter an invalid character.\")\n",
+    "\n",
+    "        elif choice == 2:\n",
+    "            print(\"Thanks, see you soon.\")\n",
+    "            exit = 'exit'\n",
+    "            \n",
+    "        else:\n",
+    "            print('Invalid choice.')\n",
+    "\n",
+    "    except ValueError:\n",
+    "        print(\"Enter a valid choice\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
