--- a/input_output.ipynb
+++ b/input_output.ipynb
@@ -304,6 +304,51 @@
     "        print(\"Enter a valid choice\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b28a37e6",
+   "metadata": {},
+   "source": [
+    "##### 8. .You have two lists: names = [\"Alice\", \"Bob\", \"Charlie\"] and scores = [85, 92, 78]. Print these lists as a simple table with columns “Name” and “Score\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3bee1be2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name       Score\n",
+      "-----------------\n",
+      "Alice        5\n",
+      "Bob          8\n",
+      "Charlie      7\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = [\"Alice\", \"Bob\", \"Charlie\"]\n",
+    "scores = [5,8,7]\n",
+    "\n",
+    "print(f\"{'Name':<10} {'Score':>5}\")\n",
+    "print(\"-\"*17)\n",
+    "\n",
+    "for name, score in zip(names,scores):\n",
+    "    print(f\"{name :<10}{score :>4}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "744c6cab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
