--- a/input_output.ipynb
+++ b/input_output.ipynb
@@ -310,7 +310,7 @@
    "id": "b28a37e6",
    "metadata": {},
    "source": [
-    "##### 8. .You have two lists: names = [\"Alice\", \"Bob\", \"Charlie\"] and scores = [85, 92, 78]. Print these lists as a simple table with columns “Name” and “Score\"."
+    "##### 8. You have two lists: names = [\"Alice\", \"Bob\", \"Charlie\"] and scores = [85, 92, 78]. Print these lists as a simple table with columns “Name” and “Score\"."
    ]
   },
   {
@@ -343,12 +343,43 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "744c6cab",
+   "cell_type": "markdown",
+   "id": "233ee261",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##### 9. Ask the user for a number. Print this number padded with leading zeros to a width of 5. For example, if the input is 12, the output should be “00012“."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "95d6c86b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "00053"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "number = input(\"Enter an integer number please\")\n",
+    "code = []\n",
+    "\n",
+    "x = 0\n",
+    "while x < (5-len(number)):\n",
+    "    code.append(0)\n",
+    "    x +=1\n",
+    "code.append(int(number))\n",
+    "\n",
+    "for x in code:\n",
+    "    print(x, end='')\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
