--- a/loops.ipynb
+++ b/loops.ipynb
@@ -13,7 +13,7 @@
    "id": "35b9828f",
    "metadata": {},
    "source": [
-    "##### 1. Print first 10 natural numbers using while loop\n"
+    "##### 1. Print first 10 natural numbers using while loop"
    ]
   },
   {
@@ -95,7 +95,7 @@
    "id": "31f90ebe",
    "metadata": {},
    "source": [
-    "##### 2. Calculate sum of all numbers from 1 to a given number\n"
+    "##### 3. Calculate sum of all numbers from 1 to a given number"
    ]
   },
   {
@@ -122,6 +122,46 @@
     "    counter += 1\n",
     "\n",
     "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55c6f998",
+   "metadata": {},
+   "source": [
+    "##### 4. Print multiplication table of a given number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1a4d7520",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "5\n",
+      "10\n",
+      "15\n",
+      "20\n",
+      "25\n",
+      "30\n",
+      "35\n",
+      "40\n",
+      "45\n",
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "given = int(input(\"Please, enter a number between 0 and 10\"))\n",
+    "\n",
+    "for x in range(0,11):\n",
+    "    result = given * x\n",
+    "    print(result)\n"
    ]
   }
  ],
