--- a/loops.ipynb
+++ b/loops.ipynb
@@ -163,6 +163,42 @@
     "    result = given * x\n",
     "    print(result)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a125216",
+   "metadata": {},
+   "source": [
+    "##### 5. Print from a list all the number that are divisible by 5, smaller than 150. The loop should stop if an encountered number is greater than 500."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a3f73d2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75\n",
+      "150\n",
+      "145\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [12, 75, 150, 180, 145, 525, 50]\n",
+    "\n",
+    "for x in numbers:\n",
+    "    if x > 500:\n",
+    "        break\n",
+    "    elif (x <= 150) and (x % 5 == 0) :\n",
+    "        print(x)\n",
+    "    else:\n",
+    "        continue"
+   ]
   }
  ],
  "metadata": {
