--- a/loops.ipynb
+++ b/loops.ipynb
@@ -199,6 +199,80 @@
     "    else:\n",
     "        continue"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "676091fb",
+   "metadata": {},
+   "source": [
+    "##### 6. Use a while loop to count the number of digits in a number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d84faf6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 7472956390\n",
+    "counter = 0\n",
+    "\n",
+    "while number > 0:\n",
+    "    number = number // 10\n",
+    "    counter += 1\n",
+    "\n",
+    "print(counter)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6382b5e5",
+   "metadata": {},
+   "source": [
+    "##### 7. Print:\n",
+    "    5 4 3 2 1\n",
+    "    4 3 2 1\n",
+    "    3 2 1\n",
+    "    2 1\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "f088babb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "543214321321211"
+     ]
+    }
+   ],
+   "source": [
+    "limiter = 5\n",
+    "number = 5\n",
+    "\n",
+    "while limiter > 0:\n",
+    "    for x in range(number,0,-1):\n",
+    "        print(x,end='')\n",
+    "    number -= 1\n",
+    "    limiter -= 1\n",
+    "    \n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
