--- a/loops.ipynb
+++ b/loops.ipynb
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "f088babb",
    "metadata": {},
    "outputs": [
@@ -256,19 +256,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "543214321321211"
+      "5432154321543215432154321"
      ]
     }
    ],
    "source": [
-    "limiter = 5\n",
     "number = 5\n",
     "\n",
-    "while limiter > 0:\n",
-    "    for x in range(number,0,-1):\n",
-    "        print(x,end='')\n",
-    "    number -= 1\n",
-    "    limiter -= 1\n",
+    "for x in range(5):\n",
+    "    for j in range,0,-1):\n",
+    "        print(j,end='')\n",
+    "\n",
+    "\n",
     "    \n",
     "\n",
     "\n"
