--- a/loops.ipynb
+++ b/loops.ipynb
@@ -91,6 +91,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b7063d75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "12\n",
+      "123\n",
+      "1234\n",
+      "12345\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(1,5+1):\n",
+    "    for j in range(1,x+1):\n",
+    "        print(j,end='')\n",
+    "    print()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "31f90ebe",
    "metadata": {},
@@ -243,6 +268,7 @@
     "    4 3 2 1\n",
     "    3 2 1\n",
     "    2 1\n",
+    "    1\n",
     "    \n"
    ]
   },
@@ -256,21 +282,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5432154321543215432154321"
+      "54321\n",
+      "4321\n",
+      "321\n",
+      "21\n",
+      "1\n"
      ]
     }
    ],
    "source": [
     "number = 5\n",
     "\n",
-    "for x in range(5):\n",
-    "    for j in range,0,-1):\n",
+    "for x in range(number, 0, -1):\n",
+    "    for j in range(x, 0 ,-1):\n",
     "        print(j,end='')\n",
-    "\n",
-    "\n",
-    "    \n",
+    "    print() \n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc8529ce",
+   "metadata": {},
+   "source": [
+    "##### 8. Print a list in reverse order using a loop.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "3c9d9aaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50 40 30 20 10 "
+     ]
+    }
+   ],
+   "source": [
+    "list_direct = [10, 20, 30, 40, 50]\n",
+    "lis_inversed =[]\n",
+    "\n",
+    "for x in range(len(list_direct),0,-1):\n",
+    "    print(list_direct[x-1],end=' ')\n",
+    "    \n",
+    "    \n"
    ]
   }
  ],
