--- a/loops.ipynb
+++ b/loops.ipynb
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "id": "3c9d9aaf",
    "metadata": {},
    "outputs": [
@@ -319,7 +319,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50 40 30 20 10 "
+      "50\n",
+      "40\n",
+      "30\n",
+      "20\n",
+      "10\n"
      ]
     }
    ],
@@ -327,10 +331,45 @@
     "list_direct = [10, 20, 30, 40, 50]\n",
     "lis_inversed =[]\n",
     "\n",
-    "for x in range(len(list_direct),0,-1):\n",
-    "    print(list_direct[x-1],end=' ')\n",
-    "    \n",
+    "for x in range(len(list_direct), 0, -1):\n",
+    "    print(list_direct[x-1])\n",
     "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0458f029",
+   "metadata": {},
+   "source": [
+    "##### 9. Display numbers from -10 to -1 using for loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "5705d58b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-10\n",
+      "-9\n",
+      "-8\n",
+      "-7\n",
+      "-6\n",
+      "-5\n",
+      "-4\n",
+      "-3\n",
+      "-2\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in range(-10,0):\n",
+    "    print(num)"
    ]
   }
  ],
