--- a/loops.ipynb
+++ b/loops.ipynb
@@ -341,7 +341,7 @@
    "id": "0458f029",
    "metadata": {},
    "source": [
-    "##### 9. Display numbers from -10 to -1 using for loop"
+    "##### 9. Display numbers from -10 to -1 using for loop."
    ]
   },
   {
@@ -371,6 +371,55 @@
     "for num in range(-10,0):\n",
     "    print(num)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35b57068",
+   "metadata": {},
+   "source": [
+    "##### 10. Print all prime numbers within a range."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "4ff6d33a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29\n",
+      "31\n",
+      "37\n",
+      "41\n",
+      "43\n",
+      "47\n"
+     ]
+    }
+   ],
+   "source": [
+    "left_limit = int(input(\"Enter a number, please.\"))\n",
+    "right_limit = int(input(\"Enter the second number.\"))\n",
+    "\n",
+    "for number in range(left_limit, right_limit):\n",
+    "    if number > 1:\n",
+    "        for i in range(2, number):\n",
+    "            if (number % i == 0):\n",
+    "                break\n",
+    "        else:\n",
+    "            print(number)\n",
+    "            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fe6eb1a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
