--- a/loops.ipynb
+++ b/loops.ipynb
@@ -414,12 +414,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "6fe6eb1a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##### 11. Print the Fibonacci sequence up to n terms."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "9ad8a218",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 1 2 3 5 8 13 21 34 "
+     ]
+    }
+   ],
+   "source": [
+    "terms = 10\n",
+    "number = 0\n",
+    "adding = 1\n",
+    "\n",
+    "for x in range(0,terms):\n",
+    "    result = adding + number\n",
+    "    print(number, end=' ')\n",
+    "    number = adding\n",
+    "    adding = result\n",
+    "    \n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
