--- a/loops.ipynb
+++ b/loops.ipynb
@@ -449,6 +449,74 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86deda62",
+   "metadata": {},
+   "source": [
+    "##### 12. Find the factorial of a given number using a loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b0cada2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "6\n",
+      "24\n",
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 5\n",
+    "factorial = 1\n",
+    "\n",
+    "for x in range(1,n+1):\n",
+    "    factorial = factorial * x    \n",
+    "    print(factorial)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "b55a9ba5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_ = 5\n",
+    "factorial_ = 1\n",
+    "\n",
+    "while num_ > 0 :\n",
+    "    factorial_ = factorial_ * num_\n",
+    "    num_ -= 1\n",
+    "print(factorial_)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f6ecfd1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
