--- a/loops.ipynb
+++ b/loops.ipynb
@@ -511,12 +511,69 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "7f6ecfd1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##### 13. Given a number, return its reverse. For example, given 1234, return 4321."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c17bcdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "123\n",
+      "3\n",
+      "12\n",
+      "2\n",
+      "1\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "given_n = 1234\n",
+    "reversed_n = 0\n",
+    "\n",
+    "while given_n > 0:\n",
+    "    extracted_last_num = given_n % 10\n",
+    "    given_n = given_n // 10 \n",
+    "\n",
+    "    print(extracted_last_num)\n",
+    "    print(given_n)\n",
+    "\n",
+    "    while e\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "d5e71a14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "123\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1234%10)\n",
+    "print(1234//10)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
