--- a/loops.ipynb
+++ b/loops.ipynb
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "id": "9ad8a218",
    "metadata": {},
    "outputs": [
@@ -444,10 +444,7 @@
     "    result = adding + number\n",
     "    print(number, end=' ')\n",
     "    number = adding\n",
-    "    adding = result\n",
-    "    \n",
-    "\n",
-    "\n"
+    "    adding = result "
    ]
   },
   {
@@ -460,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "b0cada2c",
    "metadata": {},
    "outputs": [
@@ -468,10 +465,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n",
-      "6\n",
-      "24\n",
       "120\n"
      ]
     }
@@ -482,7 +475,7 @@
     "\n",
     "for x in range(1,n+1):\n",
     "    factorial = factorial * x    \n",
-    "    print(factorial)"
+    "print(factorial)"
    ]
   },
   {
@@ -520,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4c17bcdf",
    "metadata": {},
    "outputs": [
@@ -528,14 +521,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "123\n",
-      "3\n",
-      "12\n",
-      "2\n",
-      "1\n",
-      "1\n",
-      "0\n"
+      "reversed    4321\n"
      ]
     }
    ],
@@ -547,32 +533,45 @@
     "    extracted_last_num = given_n % 10\n",
     "    given_n = given_n // 10 \n",
     "\n",
-    "    print(extracted_last_num)\n",
-    "    print(given_n)\n",
+    "    #print(f\"extracted    {extracted_last_num}\")\n",
+    "    #print(f\"still to be extract  {given_n}\")\n",
     "\n",
-    "    while e\n",
-    "    \n"
+    "    reversed_n = (reversed_n * 10) + extracted_last_num\n",
+    "    \n",
+    "print(f\"reversed    {reversed_n}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b08dcf1c",
+   "metadata": {},
+   "source": [
+    "##### 14. From a list, print only the numbers in an even index using a loop.       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "d5e71a14",
+   "execution_count": 23,
+   "id": "7a2ce037",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "123\n"
+      "Index: 2, number: 30\n",
+      "Index: 4, number: 50\n",
+      "Index: 6, number: 70\n",
+      "Index: 8, number: 90\n"
      ]
     }
    ],
    "source": [
-    "print(1234%10)\n",
-    "print(1234//10)\n",
-    "\n"
+    "my_list = [10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
+    "\n",
+    "for x in range(len(my_list)):\n",
+    "    if x % 2 == 0 and x != 0:\n",
+    "        print(f\"Index: {x}, number: {my_list[x]}\")\n"
    ]
   }
  ],
