--- a/loops.ipynb
+++ b/loops.ipynb
@@ -573,6 +573,130 @@
     "    if x % 2 == 0 and x != 0:\n",
     "        print(f\"Index: {x}, number: {my_list[x]}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3848351f",
+   "metadata": {},
+   "source": [
+    "##### 15. Calculate the sum of the digits of a number using a loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "cd67539f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = int(input(\"Enter an integer number.\"))\n",
+    "digits_sum = 0\n",
+    "\n",
+    "while number > 0:\n",
+    "    last_digit = number % 10    \n",
+    "    digits_sum += last_digit\n",
+    "    number = number // 10\n",
+    "\n",
+    "print(digits_sum)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38ba5ab8",
+   "metadata": {},
+   "source": [
+    "##### 16. Calculate the cube of the numbers from 1 to an input number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "fe3d9265",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number: 1. The cube is: 1\n",
+      "Number: 2. The cube is: 8\n",
+      "Number: 3. The cube is: 27\n",
+      "Number: 4. The cube is: 64\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_num = int(input(\"Enter a number.\"))\n",
+    "\n",
+    "for x in range(1,input_num+1):\n",
+    "    cube_num = x ** 3\n",
+    "    print(f\"Number: {x}. The cube is: {cube_num}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c81d000",
+   "metadata": {},
+   "source": [
+    "##### 17. Print the pattern:\n",
+    "    *\n",
+    "    * *\n",
+    "    * * *\n",
+    "    * * * *\n",
+    "    * * * * *\n",
+    "    * * * *\n",
+    "    * * *   \n",
+    "    * *\n",
+    "    *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c539c7fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "* \n",
+      "2\n",
+      "* * \n",
+      "3\n",
+      "* * * \n",
+      "4\n",
+      "* * * * \n",
+      "5\n",
+      "* * * * * \n",
+      "* * * * \n",
+      "* * * \n",
+      "* * \n"
+     ]
+    }
+   ],
+   "source": [
+    "limiter = 5\n",
+    "\n",
+    "\n",
+    "    for x in range(1,(limiter*2) +1):\n",
+    "        print(x)\n",
+    "        if x < limiter:\n",
+    "            print('* '*x)\n",
+    "        elif x == limiter:\n",
+    "            print(\"x \"*x)\n",
+    "    for x in range(limiter, 1, -1):\n",
+    "                print('* '*x)"
+   ]
   }
  ],
  "metadata": {
