--- a/loops.ipynb
+++ b/loops.ipynb
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c539c7fe",
    "metadata": {},
    "outputs": [
@@ -668,19 +668,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
       "* \n",
-      "2\n",
       "* * \n",
-      "3\n",
       "* * * \n",
-      "4\n",
       "* * * * \n",
-      "5\n",
       "* * * * * \n",
       "* * * * \n",
       "* * * \n",
-      "* * \n"
+      "* * \n",
+      "* \n"
      ]
     }
    ],
@@ -688,14 +684,16 @@
     "limiter = 5\n",
     "\n",
     "\n",
-    "    for x in range(1,(limiter*2) +1):\n",
-    "        print(x)\n",
-    "        if x < limiter:\n",
-    "            print('* '*x)\n",
-    "        elif x == limiter:\n",
-    "            print(\"x \"*x)\n",
-    "    for x in range(limiter, 1, -1):\n",
-    "                print('* '*x)"
+    "for x in range(1,(limiter*2)+1):\n",
+    "    if x < limiter:\n",
+    "        print('* '*x)\n",
+    "    elif x == limiter:\n",
+    "        print(\"* \"*x)\n",
+    "\n",
+    "for x in range((limiter-1),0,-1):       \n",
+    "    print(\"* \"*x)\n",
+    "    \n",
+    "    "
    ]
   }
  ],
