--- a/loops.ipynb
+++ b/loops.ipynb
@@ -695,6 +695,55 @@
     "    \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8506e64",
+   "metadata": {},
+   "source": [
+    "##### 18. Print the multiplication table for a given number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "18c76519",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MULTIPLICATION TABLE OF 4\n",
+      "\n",
+      "Multiplication     Result\n",
+      "\n",
+      "4 X 0                0\n",
+      "4 X 1                4\n",
+      "4 X 2                8\n",
+      "4 X 3               12\n",
+      "4 X 4               16\n",
+      "4 X 5               20\n",
+      "4 X 6               24\n",
+      "4 X 7               28\n",
+      "4 X 8               32\n",
+      "4 X 9               36\n",
+      "4 X 10              40\n"
+     ]
+    }
+   ],
+   "source": [
+    "given = int(input(\"Please, enter a number\"))\n",
+    "print(f\"MULTIPLICATION TABLE OF {given}\")\n",
+    "print(\"\\r\")\n",
+    "print(f\"{'Multiplication':<5} {'Result':>10}\")\n",
+    "print(\"\\r\")\n",
+    "\n",
+    "\n",
+    "for x in range(11):\n",
+    "    result = given * x\n",
+    "    print(f\"{given} X {x:<5} {result :>12}\")"
+   ]
   }
  ],
  "metadata": {
