--- a/loops.ipynb
+++ b/loops.ipynb
@@ -744,6 +744,85 @@
     "    result = given * x\n",
     "    print(f\"{given} X {x:<5} {result :>12}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34e32f9b",
+   "metadata": {},
+   "source": [
+    "##### 19. Print the pattern:\n",
+    "    1\n",
+    "    2 3\n",
+    "    4 5 6\n",
+    "    7 8 9 10\n",
+    "    11 12 13 14 15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "ee4969bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 \n",
+      "2 3 \n",
+      "4 5 6 \n",
+      "7 8 9 10 \n",
+      "11 12 13 14 15 \n"
+     ]
+    }
+   ],
+   "source": [
+    "last_num = 5\n",
+    "init_num = 1\n",
+    "counter = 0\n",
+    "\n",
+    "for x in range(1,last_num+1):\n",
+    "    string = ''\n",
+    "    for j in range(1,x+1):\n",
+    "        counter += 1\n",
+    "        string += f\"{counter} \"\n",
+    "    print(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f15360f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "counter = 0\n",
+    "number = 5\n",
+    "for i in range(1, 5+1):\n",
+    "    for j in rnage\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3778fc8c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
