--- a/loops.ipynb
+++ b/loops.ipynb
@@ -18,27 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "34174986",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 0\n",
     "\n",
@@ -62,22 +45,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "8842e97c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "12\n",
-      "123\n",
-      "1234\n",
-      "12345\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "number_list = ''\n",
     "x = 0\n",
@@ -92,22 +63,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "b7063d75",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "12\n",
-      "123\n",
-      "1234\n",
-      "12345\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for x in range(1,5+1):\n",
     "    for j in range(1,x+1):\n",
@@ -125,18 +84,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "cf57a03c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "55\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "given = int(input(\"Please, enter a number\"))\n",
     "counter = 0\n",
@@ -159,28 +110,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "1a4d7520",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "5\n",
-      "10\n",
-      "15\n",
-      "20\n",
-      "25\n",
-      "30\n",
-      "35\n",
-      "40\n",
-      "45\n",
-      "50\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "given = int(input(\"Please, enter a number between 0 and 10\"))\n",
     "\n",
@@ -199,20 +132,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "a3f73d2b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "75\n",
-      "150\n",
-      "145\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "numbers = [12, 75, 150, 180, 145, 525, 50]\n",
     "\n",
@@ -238,15 +161,7 @@
    "execution_count": null,
    "id": "d84faf6d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "number = 7472956390\n",
     "counter = 0\n",
@@ -277,19 +192,7 @@
    "execution_count": null,
    "id": "f088babb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "54321\n",
-      "4321\n",
-      "321\n",
-      "21\n",
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "number = 5\n",
     "\n",
@@ -311,22 +214,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "3c9d9aaf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "50\n",
-      "40\n",
-      "30\n",
-      "20\n",
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "list_direct = [10, 20, 30, 40, 50]\n",
     "lis_inversed =[]\n",
@@ -346,27 +237,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "5705d58b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-10\n",
-      "-9\n",
-      "-8\n",
-      "-7\n",
-      "-6\n",
-      "-5\n",
-      "-4\n",
-      "-3\n",
-      "-2\n",
-      "-1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for num in range(-10,0):\n",
     "    print(num)"
@@ -382,23 +256,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "4ff6d33a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "29\n",
-      "31\n",
-      "37\n",
-      "41\n",
-      "43\n",
-      "47\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "left_limit = int(input(\"Enter a number, please.\"))\n",
     "right_limit = int(input(\"Enter the second number.\"))\n",
@@ -423,18 +284,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9ad8a218",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 1 1 2 3 5 8 13 21 34 "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "terms = 10\n",
     "number = 0\n",
@@ -457,18 +310,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "b0cada2c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "120\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = 5\n",
     "factorial = 1\n",
@@ -480,18 +325,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "b55a9ba5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "120\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "num_ = 5\n",
     "factorial_ = 1\n",
@@ -513,18 +350,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4c17bcdf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "reversed    4321\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "given_n = 1234\n",
     "reversed_n = 0\n",
@@ -551,21 +380,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "7a2ce037",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index: 2, number: 30\n",
-      "Index: 4, number: 50\n",
-      "Index: 6, number: 70\n",
-      "Index: 8, number: 90\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_list = [10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
     "\n",
@@ -584,18 +402,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "cd67539f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "number = int(input(\"Enter an integer number.\"))\n",
     "digits_sum = 0\n",
@@ -618,21 +428,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "fe3d9265",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number: 1. The cube is: 1\n",
-      "Number: 2. The cube is: 8\n",
-      "Number: 3. The cube is: 27\n",
-      "Number: 4. The cube is: 64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_num = int(input(\"Enter a number.\"))\n",
     "\n",
@@ -660,26 +459,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "c539c7fe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "* \n",
-      "* * \n",
-      "* * * \n",
-      "* * * * \n",
-      "* * * * * \n",
-      "* * * * \n",
-      "* * * \n",
-      "* * \n",
-      "* \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "limiter = 5\n",
     "\n",
@@ -706,32 +489,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "18c76519",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MULTIPLICATION TABLE OF 4\n",
-      "\n",
-      "Multiplication     Result\n",
-      "\n",
-      "4 X 0                0\n",
-      "4 X 1                4\n",
-      "4 X 2                8\n",
-      "4 X 3               12\n",
-      "4 X 4               16\n",
-      "4 X 5               20\n",
-      "4 X 6               24\n",
-      "4 X 7               28\n",
-      "4 X 8               32\n",
-      "4 X 9               36\n",
-      "4 X 10              40\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "given = int(input(\"Please, enter a number\"))\n",
     "print(f\"MULTIPLICATION TABLE OF {given}\")\n",
@@ -760,22 +521,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "ee4969bf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 \n",
-      "2 3 \n",
-      "4 5 6 \n",
-      "7 8 9 10 \n",
-      "11 12 13 14 15 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "last_num = 5\n",
     "init_num = 1\n",
@@ -790,39 +539,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f15360f",
+   "cell_type": "markdown",
+   "id": "3778fc8c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n"
-     ]
-    }
-   ],
    "source": [
-    "counter = 0\n",
-    "number = 5\n",
-    "for i in range(1, 5+1):\n",
-    "    for j in rnage\n",
-    "\n",
-    "    "
+    "##### 20. Flatten a nested list using loops. The result should be a single list. For example, [[1, 2], [3, 4], [5]] should become [1, 2, 3, 4, 5]."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3778fc8c",
+   "id": "c034e969",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nested_list = [1, [2, 3], [4, 5, 6], 7, [8, 9]]\n",
+    "\n",
+    "flatten_list = []\n",
+    "\n",
+    "for elements in nested_list:\n",
+    "    for x in elements:\n",
+    "        flatten_list.append(x)\n",
+    "\n",
+    "print(flatten_list)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
